# SNIPS

./: BUGS  Configure  INSTALL  Makefile  Makefile.dist  Makefile.head  Makefile.mid  Makefile.tail  README  README.DATABASES  TODO  TODO.autotools  aclocal.m4  autogen.sh  buildsys.mk.in  configure  configure.ac  misc.defs.mk.in  snips.conf
autoconf/: configure.in
cmu-snmp/: .gitignore  mib-v2.txt  strip-mib.pl
cmu-snmp/snmp/: BuildingAtCMU  Makefile.in  SMakefile  asn1.c  asn1.h  coexistance.c  config.h.in  configure  configure.in  libsnmp.h  libsnmp.la  libtool  mib.c  mibii.c  mibii.h  mini-client.c  mini-client.h  new-parse.c  options.h  parse.c  parse.h  snmp-internal.h  snmp-man.pl  snmp-mib.h  snmp.h  snmp_api.c  snmp_api_error.c  snmp_api_error.h  snmp_api_util.c  snmp_client.c  snmp_coexist.h  snmp_compat.h  snmp_dump.c  snmp_dump.h  snmp_error.c  snmp_error.h  snmp_extra.c  snmp_extra.h  snmp_msg.c  snmp_msg.h  (+7 more)
cmu-snmp/snmpapps/: Makefile.in  SMakefile  configure  configure.in  libtool  make-manpages.pl  options.h  snmpdelta.c  snmpget.c  snmpgetnext.c  snmpset.c  snmpstatus.c  snmptest.c  snmptranslate.c  snmptrap.c  snmptrap2.c  snmptrapd.c  snmpwalk.c  uptime.c  uptime.h  version.c  version.h
contrib/: README  pm3dmmon  pm3t1e1mon  xntpdmon
contrib/hostmon/: Nocol.COPYRIGHT  hostmond
contrib/php/: dump_datafile.php
contrib/portman_ssl/: portmon.c.patch  portmon.h.patch
docs/: bugs.txt  design.html  faq.html  index.html  opsguide.html  release.html
etherload/: DEVNOTES  Makefile  Makefile.am  Makefile.mid  Makefile.standalone  bpf.c  dlpi.c  etherload-confg  etherload.c  etherload.h  externs.h  get_devlist.c  get_devlist.h  linux.c  main.c  nit.c  os.h  pfilt.c  pfopen.c  snips_specific.c  snips_specific.h  snoop.c  util.c  util.h
include/: Makefile  config.h.in  ndaemon.h  nsmon.h  ntpmon.h  osdefs.h  pingmon.h  portmon.h  radiusmon.h  snips.h  snips_funcs.h  snipslogd.h  snipstv.h  tpmon.h  trapmon.h  version.h
lib/: Makefile  Makefile.am  Makefile.mid  bsdsignal.c  daemon.c  event_utils.c  eventlog.c  getdate.y  netmisc.c  odbc_api.c  oracle_api.c  putenv.c  rrd_funcs.c  snips_funcs.c  snips_main.c  strfuncs.c
m4/: buildsys.m4
man/: Makefile  Makefile.am  Makefile.mid  multiping.8  portmon.8  snips-utility.8  snipslogd.8  tksnips.1
man/man1/: snipstv.1.in
man/man3/: snips-perl.3.in
man/man8/: etherload.8.in  nsmon.8.in  ntpmon.8.in  pingmon.8.in  radiusmon.8.in  snips.8.in  tpmon.8.in  trapmon.8.in
nsmon/: Makefile  Makefile.am  Makefile.mid  main.c  nsmon-confg  nsmon.c
ntpmon/: Makefile  Makefile.am  Makefile.mid  main.c  ntpmon.c
perl-module/: Makefile.PL  SNIPS.pm  SNIPS.xs  test.pl
perl-monitors/: Makefile.am  Makefile.mid  README  apcmon  armon  bgpmon  bpmon  ciscomon  hostmon  hostmon-collector  hostmon-confg  mkarmon  mknrmon  modemmon  novellmon  nrmon  rcisco  smbmon  snipsperl.conf  snmpgeneric  snmpgeneric2  snmpmon  snmpmon-collector  sqlmon  syslogmon  syslogmon-confg  testlog  upsmon
perl-monitors/hostmon-osclients/: hostmon-client  hostmon-client.aix  hostmon-client.bsdi  hostmon-client.freebsd  hostmon-client.hpux  hostmon-client.irix5  hostmon-client.irix6  hostmon-client.linux  hostmon-client.nt  hostmon-client.osf1  hostmon-client.solaris2  hostmon-client.sunos4  hostmon-client.ultrix
pingmon/: Makefile  Makefile.am  Makefile.mid  main.c  pingmon.c
pingmon/multiping/: Makefile  Makefile.am  Makefile.mid  multiping.c  multiping.h
pingmon/rpcping/: Makefile  Makefile.am  Makefile.mid  rpcping.c
portmon/: Makefile  Makefile.am  Makefile.mid  main.c  portmon.c
radiusmon/: Makefile  Makefile.am  Makefile.mid  main.c  radiusmon-confg  radiusmon.c
snipslog/: Makefile  Makefile.am  Makefile.mid  snipslogd-confg  snipslogd.c  snipslogtest.c
snipslog/test/: Makefile
snipstv/: Makefile  Makefile.am  Makefile.mid  create_subwins.c  do_filter.c  help_page.c  init.c  main.c  parse_user_input.c  update_eventwin.c  update_msgtitle.c  update_msgwin.c  update_promptwin.c  update_title.c
snipsweb/: Makefile  Makefile.am  Makefile.mid  genweb-filter.cgi  genweb-filter.cgi.in  genweb.cgi  genweb.cgi.in  genweb.pl  rrdgraph.cgi  rrdgraph.cgi.in  snipsweb-confg  snipsweb-confg.in  snipsweb.cgi  snipsweb.cgi.in
tksnips/: Makefile  Makefile.am  Makefile.mid  README  ndaemon.c  tkSnips
tpmon/: Makefile  Makefile.am  Makefile.mid  main.c  tpmon-confg  tpmon.c  tptest.1  tptest.c  tptest.h
trapmon/: Makefile  Makefile.am  Makefile.mid  snips_specific.c  trapmon.c
utility/: Makefile  Makefile.am  Makefile.mid  beep_oncall  crontab.snips  crontab.snips.in  display_snips_datafile.c  docrypt.pl  eventselect.c  keepalive_monitors.pl  keepalive_monitors.pl.in  leapdates.pl  logmaint.pl  logmaint.pl.in  logstats.pl  myinstall  notifier-confg  notifier.pl  notifier.pl.in  snipsprog.init  snipsprog.init.in
utility/display_snips_datafile/: Makefile  display_snips_datafile.c
(+7 files in other folders)
